update state should work with generic states